{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 182,
  "lineage": "62033187-b908-4ded-03dc-57f5ba75d5e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ci_cd_nexus_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:550149511069:instance/i-0c149a83c4033070e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c149a83c4033070e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e0065cda4a6f8e19"
              }
            ],
            "primary_network_interface_id": "eni-0e0065cda4a6f8e19",
            "private_dns": "ip-10-1-1-94.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.94",
            "public_ip": "13.233.109.187",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01a87db2c4b3eb8bd",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fde4d75f72597ad",
            "tags": {
              "Name": "ci-cd-nexus-server"
            },
            "tags_all": {
              "Name": "ci-cd-nexus-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c33103348bce3cc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "i-0c149a83c4033070e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.ci_cd_sg",
            "aws_subnet.ci_cd_public_subnet",
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ci_cd_runner_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:550149511069:instance/i-090cf80c3f2839476",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090cf80c3f2839476",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-003566d2e1f7ca2c7"
              }
            ],
            "primary_network_interface_id": "eni-003566d2e1f7ca2c7",
            "private_dns": "ip-10-1-1-182.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.182",
            "public_ip": "13.206.189.70",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0af3eba6b7b34d4f7",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fde4d75f72597ad",
            "tags": {
              "Environment": "dev",
              "Name": "ci-cd-runner-1",
              "Project": "ci-cd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ci-cd-runner-1",
              "Project": "ci-cd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c33103348bce3cc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "i-090cf80c3f2839476",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.ci_cd_sg",
            "aws_subnet.ci_cd_public_subnet",
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ci_cd_runner_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:550149511069:instance/i-043f1acf8cd726c54",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043f1acf8cd726c54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0498d7b92a44e7866"
              }
            ],
            "primary_network_interface_id": "eni-0498d7b92a44e7866",
            "private_dns": "ip-10-1-1-225.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.225",
            "public_ip": "13.206.251.233",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01645d22b19394eb8",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fde4d75f72597ad",
            "tags": {
              "Environment": "dev",
              "Name": "ci-cd-runner-2",
              "Project": "ci-cd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ci-cd-runner-2",
              "Project": "ci-cd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c33103348bce3cc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "i-043f1acf8cd726c54",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.ci_cd_sg",
            "aws_subnet.ci_cd_public_subnet",
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ci_cd_sonarqube_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:550149511069:instance/i-0f2262cd8c25e389e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2262cd8c25e389e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01b1e99176bd7c362"
              }
            ],
            "primary_network_interface_id": "eni-01b1e99176bd7c362",
            "private_dns": "ip-10-1-1-105.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.105",
            "public_ip": "13.233.130.136",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb80c142fc1981ee",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fde4d75f72597ad",
            "tags": {
              "Name": "ci-cd-sonarqube-server"
            },
            "tags_all": {
              "Name": "ci-cd-sonarqube-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c33103348bce3cc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "i-0f2262cd8c25e389e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.ci_cd_sg",
            "aws_subnet.ci_cd_public_subnet",
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ci_cd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550149511069:internet-gateway/igw-0637fdb296ada0ef3",
            "id": "igw-0637fdb296ada0ef3",
            "owner_id": "550149511069",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ci-cd-igw",
              "Project": "ci-cd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ci-cd-igw",
              "Project": "ci-cd"
            },
            "vpc_id": "vpc-050b4aa11d2ce6f15"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "igw-0637fdb296ada0ef3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ci_cd_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550149511069:route-table/rtb-0210aae8afba3bdf4",
            "id": "rtb-0210aae8afba3bdf4",
            "owner_id": "550149511069",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0637fdb296ada0ef3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ci-cd-public-rt",
              "Project": "ci-cd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ci-cd-public-rt",
              "Project": "ci-cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-050b4aa11d2ce6f15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "rtb-0210aae8afba3bdf4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.ci_cd_igw",
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ci_cd_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee4ac22da97ead9a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0210aae8afba3bdf4",
            "subnet_id": "subnet-06fde4d75f72597ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "rtbassoc-0ee4ac22da97ead9a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.ci_cd_igw",
            "aws_route_table.ci_cd_public_rt",
            "aws_subnet.ci_cd_public_subnet",
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ci_cd_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550149511069:security-group/sg-00c33103348bce3cc",
            "description": "CI-CD Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c33103348bce3cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "GitLab",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nexus",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "ci-cd-sg",
            "name_prefix": "",
            "owner_id": "550149511069",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ci-cd-sg",
              "Project": "ci-cd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ci-cd-sg",
              "Project": "ci-cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-050b4aa11d2ce6f15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "sg-00c33103348bce3cc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ci_cd_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550149511069:subnet/subnet-06fde4d75f72597ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fde4d75f72597ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550149511069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ci-cd-public-subnet",
              "Project": "ci-cd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ci-cd-public-subnet",
              "Project": "ci-cd"
            },
            "vpc_id": "vpc-050b4aa11d2ce6f15"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "subnet-06fde4d75f72597ad",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ci_cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ci_cd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550149511069:vpc/vpc-050b4aa11d2ce6f15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0191e1c3ae7237672",
            "default_route_table_id": "rtb-002e9806edcafcb00",
            "default_security_group_id": "sg-0c509683718f8b6c8",
            "dhcp_options_id": "dopt-04f58faa012a3c837",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050b4aa11d2ce6f15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002e9806edcafcb00",
            "owner_id": "550149511069",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ci-cd-vpc",
              "Project": "ci-cd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ci-cd-vpc",
              "Project": "ci-cd"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550149511069",
            "id": "vpc-050b4aa11d2ce6f15",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}